objects/INFRA__JDA_Connector_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>JDA Connector Custom Settings to hold BU level configuration for Foerecast data publish to JDA Bridge
NOTE - Manage Packaged Piece</description>
    <fields>
        <fullName>INFRA__ATTRIB_NM_1__c</fullName>
        <inlineHelpText>Describe what data element from SFDC forecast will be mapped with &quot;ATTRIB_NM_1&quot; field of JDA Bridge</inlineHelpText>
        <label>Forecast element for ATTRIB_NM_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INFRA__ATTRIB_NM_2__c</fullName>
        <inlineHelpText>Describe what data element from SFDC forecast will be mapped with &quot;ATTRIB_NM_2&quot; field of JDA Bridge</inlineHelpText>
        <label>Forecast element for ATTRIB_NM_2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INFRA__ATTRIB_NM_3__c</fullName>
        <inlineHelpText>Describe what data element from SFDC forecast will be mapped with &quot;ATTRIB_NM_3&quot; field of JDA Bridge</inlineHelpText>
        <label>Forecast element for ATTRIB_NM_3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INFRA__Default_Period_Indicator__c</fullName>
        <defaultValue>&quot;401&quot;</defaultValue>
        <description>Field which indicate Forecast Period - Yearly, Quaterly or Monthly</description>
        <inlineHelpText>The allowed values are : 400 - Yearly, 401 - Monthly, 402 - Quarterly</inlineHelpText>
        <label>Default Period Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Error_Recipient__c</fullName>
        <description>Provide all the email address to whom the error email will be sent by using comma(,) as seprator. Example: xyz@te.com,zyx@te.com</description>
        <inlineHelpText>Provide all the email address to whom the error email will be sent by using comma(,) as seprator. Example: xyz@te.com,zyx@te.com</inlineHelpText>
        <label>Error Recipient(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INFRA__Forecast_for_GAM_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the forecast is done at GAM Hierarchy Level</description>
        <inlineHelpText>Checked if BU forecast will be done at GAM Hierarchy Level</inlineHelpText>
        <label>Forecast for GAM Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Forecast_for_Sales_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the forecast is done at Sales Hierarchy Level</description>
        <inlineHelpText>Checked if BU forecast will be done at Sales Hierarchy Level</inlineHelpText>
        <label>Forecast for Sales Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Region__c</fullName>
        <description>The geographical region of the business unit that the data is being sent for.
The possible values for this element are in the Region Hierarchy. 
Examples are EMEA (0401), NA, SA, ANZ, AP</description>
        <inlineHelpText>Enter default geographical region of the business unit that the data is being sent for</inlineHelpText>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Sales_Territory_Indicator__c</fullName>
        <description>Field to capture Sales Territory Indicator, Example DD1, DD2...</description>
        <inlineHelpText>Enter  Sales Territory Indicator, Example DD1, DD2...</inlineHelpText>
        <label>Sales Territory Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Sales_Territory_Type__c</fullName>
        <description>If forecast is done at Sales HIerarchy, this field Indicates the Sales Territory Type. Example - RSM, SE</description>
        <inlineHelpText>Enter Sales Territory Type. Example - RSM, SE</inlineHelpText>
        <label>Sales Territory Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Site_Indicator__c</fullName>
        <defaultValue>&quot;103&quot;</defaultValue>
        <description>This contains TE site type</description>
        <inlineHelpText>Site Indicator	 Values. 100 - Building, 101 - Plant, 102 - Legal Org, 103 - Others</inlineHelpText>
        <label>Site Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Site__c</fullName>
        <defaultValue>&quot;OTHER&quot;</defaultValue>
        <description>Default plant or the building that the data is being sent for. For e.g. 0492, D71</description>
        <label>Site</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>JDA Connector Config</label>
</CustomObject>